k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodlite-service
  namespace: moodlite
  labels:
    app: moodlite-app
spec:
  type: ClusterIP
  selector:
    app: moodlite-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
